# screenpy_examples

./: .flake8  .gitignore  .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml
screenpy/: README.md
screenpy/readthedocs/: README.md  pollster.py  requirements.txt  screenpy_logger.py
screenpy/readthedocs/abilities/: control_cameras.py  poll_the_audience.py
screenpy/readthedocs/actions/: jump_to_camera.py  pan.py  start_recording.py  zoom.py
screenpy/readthedocs/features/: conftest.py  test_mood.py
screenpy/readthedocs/questions/: __init__.py  audience_tension.py
screenpy/readthedocs/resolutions/: is_palpable.py
screenpy/readthedocs/resolutions/matchers/: has_saturation_greater_than.py
screenpy/readthedocs/scripts/: __init__.py  good_will_hunting.txt  shaun_of_the_dead.txt
screenpy/readthedocs/tasks/: __init__.py  cut_to_closeup.py
screenpy_appium/: README.md
screenpy_appium/android/: README.md
screenpy_appium/android/features/: test_inputs.py
screenpy_appium/android/ui/: helpers.py  text_fields_screen.py  views_screen.py
screenpy_appium/ios/: requirements.txt
screenpy_appium/ios/ui/: text_fields_screen.py
screenpy_examples/: screenpy_logger.py
screenpy_examples/screenpy/quietly_logging/actions/: __init__.py  do_thing.py  perform_thing.py  quietly.py  see.py  tryto.py
screenpy_examples/screenpy/quietly_logging/features/: conftest.py  test_quietly.py  test_tryto.py
screenpy_examples/screenpy/quietly_logging/questions/: __init__.py  simple.py
screenpy_examples/screenpy/quietly_logging/resolutions/: broken.py
screenpy_examples/screenpy/readthedocs/: README.md  cam_py.py  constants.py  pollster.py
screenpy_examples/screenpy/readthedocs/abilities/: __init__.py  control_cameras.py  poll_the_audience.py
screenpy_examples/screenpy/readthedocs/actions/: __init__.py  dolly.py  jump_to_camera.py  pan.py  simultaneously.py  skip_to_scene.py  start_recording.py  stop_recording.py  zoom.py
screenpy_examples/screenpy/readthedocs/features/: conftest.py  pytest.ini  test_mood.py
screenpy_examples/screenpy/readthedocs/questions/: audience_tension.py  top_audience_reaction.py
screenpy_examples/screenpy/readthedocs/resolutions/: __init__.py  is_palpable.py
screenpy_examples/screenpy/readthedocs/tasks/: cut_to_closeup.py  dolly_zoom.py
screenpy_examples/screenpy/silently_logging/actions/: __init__.py  perform_thing.py  see.py  see_all_of.py  see_any_of.py
screenpy_examples/screenpy/silently_logging/features/: conftest.py  pytest.ini  test_either.py  test_quietly.py
screenpy_examples/screenpy/silently_logging/questions/: __init__.py  simple.py
screenpy_examples/screenpy/silently_logging/resolutions/: __init__.py  broken.py
screenpy_examples/screenpy_appium/android/features/: conftest.py  pytest.ini  test_inputs.py
screenpy_examples/screenpy_appium/android/ui/: helpers.py  landing_screen.py  text_fields_screen.py  views_screen.py
screenpy_examples/screenpy_appium/ios/: README.md
screenpy_examples/screenpy_appium/ios/features/: conftest.py  test_inputs.py
screenpy_examples/screenpy_appium/ios/ui/: landing_screen.py  text_fields_screen.py
screenpy_examples/screenpy_playwright/swaglabs/: README.md  requirements.txt  user_types.py
screenpy_examples/screenpy_playwright/swaglabs/features/: conftest.py  pytest.ini  test_cart.py
screenpy_examples/screenpy_playwright/swaglabs/questions/: shopping_cart_badge_number.py
screenpy_examples/screenpy_playwright/swaglabs/tasks/: __init__.py  log_in.py
screenpy_examples/screenpy_playwright/swaglabs/ui/: cart_page.py  header.py  login_page.py  store_page.py
screenpy_examples/screenpy_requests/httpbin/: README.md  requirements.txt  urls.py
screenpy_examples/screenpy_requests/httpbin/features/: conftest.py  pytest.ini  test_auth.py  test_cookies.py  test_methods.py
screenpy_examples/screenpy_selenium/: README.md
screenpy_examples/screenpy_selenium/github/: README.md
screenpy_examples/screenpy_selenium/github/features/: conftest.py  test_github_search.py
screenpy_examples/screenpy_selenium/github/questions/: number_of_search_results.py  search_results_message.py
screenpy_examples/screenpy_selenium/github/tasks/: search_github.py
screenpy_examples/screenpy_selenium/github/ui/: github_header_bar.py  github_home_page.py  github_search_results_page.py
screenpy_examples/screenpy_selenium/the_internet/: README.md  screenpy_logger.py
screenpy_examples/screenpy_selenium/the_internet/actions/: __init__.py  tryto.py
screenpy_examples/screenpy_selenium/the_internet/features_pytest/: README.md  conftest.py  pytest.ini  setup_selenium.py  test_add_remove_elements.py  test_alerts.py  test_dropdowns.py  (+4 more)
screenpy_playwright/: README.md
screenpy_playwright/swaglabs/: user_types.py
screenpy_playwright/swaglabs/features/: conftest.py
screenpy_playwright/swaglabs/questions/: __init__.py
screenpy_playwright/swaglabs/tasks/: log_in.py
screenpy_requests/: README.md
screenpy_requests/httpbin/: README.md
screenpy_requests/httpbin/features/: test_auth.py
screenpy_selenium/: README.md
screenpy_selenium/github/: README.md
screenpy_selenium/github/features/: conftest.py  test_github_search.py
screenpy_selenium/github/questions/: number_of_search_results.py
screenpy_selenium/github/tasks/: search_github.py
screenpy_selenium/the_internet/: README.md  requirements.txt
screenpy_selenium/the_internet/actions/: tryto.py
screenpy_selenium/the_internet/features/: __init__.py  test_add_remove_elements.py  test_alerts.py  test_drag_and_drop.py  test_dropdowns.py  test_frames.py  test_key_presses.py  test_multiple_windows.py
screenpy_selenium/the_internet/features_pytest/: conftest.py  test_add_remove_elements.py  test_alerts.py  test_drag_and_drop.py  test_dropdowns.py  test_frames.py  test_key_presses.py  test_multiple_windows.py
screenpy_selenium/the_internet/features_unittest/: __init__.py  test_drag_and_drop.py  test_frames.py  test_key_presses.py
screenpy_selenium/the_internet/user_interface/: drag_and_drop.py  dropdown.py  iframe.py  key_presses.py  multiple_windows.py
(+17 files in other folders)
